--- a/3.html
+++ b/3.html
@@ -3,6 +3,15 @@
 <head>
   <title>호른</title>
   <meta charset="utf-8">
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-PE9GDLJHTK"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-PE9GDLJHTK');
+</script>
 </head>
 <body>
   <h1><a href="index.html">금관악기의 정의 및 종류</a></h1>
